# pmi_data_platform

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  HOWTO-新增index.md  README.md  TODO-next-version.md  TODO-真實e2e.md  TODO-跑出來.md  TODO-跑得對.md  TODO.md  architecture-current.html  business-overview.html  docker-compose.gpu.yml  docker-compose.yml  justfile  pipeline-comparison.html  roadmap-bilingual.html  up.sh
.claude/: settings.local.json
deploy/: .env.base.example  README.md  docker-compose.prod.yml
design/: 2026 Senate Index (standalone).html
docs/: architecture-current.html  business-overview.html  index.html  pipeline-comparison.html  roadmap-bilingual.html  team-roadmap-brief.html  todo-bilingual.html
mlflow/: Dockerfile  README.md
pmi-api/: .env.example  Dockerfile  README.md  pyproject.toml
pmi-api/pmi_api/: __init__.py  config.py  deps.py  main.py  schemas.py
pmi-api/pmi_api/routes/: admin.py  health.py  indexes.py  jobs.py  maga.py  settings.py
pmi-api/tests/: conftest.py  test_deps_auth.py  test_routes_auth.py  test_routes_health.py  test_routes_indexes.py  test_routes_maga.py  test_routes_null_score.py  test_routes_ondemand.py  test_routes_senate_board.py  test_routes_settings_admin.py
pmi-core/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
pmi-core/alembic/: env.py
pmi-core/alembic/versions/: 20260520_0001_initial.py  20260523_0002_mlflow_links.py  20260524_0003_core_factor_models.py  20260601_0004_polymarket_deep_signals.py  20260601_0005_ts_price_snapshots_unique.py  20260603_0006_ts_index_scores_nullable_score.py  20260606_0007_vec_embedding_unsized.py  20260611_0008_core_llm_batches.py  20260611_0009_pg_queue_workflows.py
pmi-core/pmi_core/: __init__.py  cli.py  config.py  db.py  mlflow_client.py  observability.py  queue.py  workflow.py
pmi-core/pmi_core/dsl/: __init__.py  ir.py
pmi-core/pmi_core/dsl/schema/: index-def.schema.json
pmi-core/pmi_core/engine/: __init__.py  aggregator.py  backtest.py  bucket_collapser.py  dry_run.py  factor_evaluator.py  factor_resolver.py  pipeline.py  seat_distribution.py  seat_mapping.py  selector.py  state_detail.py  state_lean.py
pmi-core/pmi_core/index_defs/: polymarket-war-index.yaml  semantic-war-demo.yaml  us-house-2026-republican-seats.yaml  us-house-2026-republican-share.yaml  us-senate-2026-republican-seats.yaml  us-senate-2026-republican-share.yaml
pmi-core/pmi_core/llm/: __init__.py  agentic_client.py  base.py  embeddings.py  ensemble_client.py  ollama_client.py  openai_client.py
pmi-core/pmi_core/models/: __init__.py  audit_chain_event.py  audit_evaluation.py  audit_pipeline_run.py  audit_source_health.py  base.py  core_api_key.py  core_factor_model.py  core_index_definition.py  core_job.py  core_llm_batch.py  core_market.py  core_prompt.py  core_trader.py  core_workflow.py  ts_index_score.py  ts_orderbook_snapshot.py  ts_price_snapshot.py  ts_trade.py  vec_market_embedding.py
pmi-core/pmi_core/prompts/factors/: armed_conflict-v1.md  direction-v1.md  directly_about_war-v1.md  high_severity-v1.md  is-house-race-2026-v1.md  is-senate-race-2026-v1.md  kinetic_action-v1.md  near_term-v1.md  republican-on-yes-v1.md  state_actor-v1.md
pmi-core/pmi_core/utils/: __init__.py  date_analyzer.py  dates.py
pmi-core/pmi_core/vectorstore/: __init__.py  base.py  milvus_store.py  pgvector_store.py
pmi-core/tests/: conftest.py  test_aggregator_liquidity.py  test_aggregator_seat_projection.py  test_bucket_collapser.py  test_date_analyzer.py  test_ir_seat_projection.py  test_mlflow_client.py  test_seat_distribution.py  test_seat_mapping.py  test_state_detail_series.py  test_state_lean.py
pmi-demo/: README.md
pmi-ingest/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
pmi-ingest/pmi_ingest/: __init__.py  cli.py  config.py  health.py
pmi-ingest/pmi_ingest/chain/: __init__.py  abis.py  cohort.py  polygon_indexer.py  uma_resolver.py
pmi-ingest/pmi_ingest/pollers/: __init__.py  forecastex_rest.py  gemini_rest.py  kalshi_clob.py  kalshi_rest.py  manifold_rest.py  metaculus_rest.py  mock_polymarket.py  polymarket_clob.py  polymarket_history.py  polymarket_rest.py  predictit_rest.py
pmi-ingest/pmi_ingest/scrapers/: __init__.py  persistence.py  playwright_base.py
pmi-ingest/pmi_ingest/scrapers/coinbase/: __init__.py  job.py  parser.py  scraper.py  types.py
pmi-ingest/pmi_ingest/scrapers/crypto/: __init__.py  job.py  parser.py  scraper.py  types.py
pmi-ingest/pmi_ingest/scrapers/robinhood/: __init__.py  job.py  parser.py  scraper.py  types.py
pmi-ingest/pmi_ingest/scrapers/scripts/: __init__.py
pmi-ingest/pmi_ingest/scrapers/scripts/base/: stealth.js
pmi-ingest/pmi_ingest/scrapers/scripts/coinbase/: check_regional_restriction.js  click_category_tab.js  click_see_more.js  diagnose_event_page.js  discover_categories.js  extract_contracts.js  extract_event_contracts.js  extract_event_title.js  extract_key_stats.js  extract_single_contract_prob.js
pmi-ingest/pmi_ingest/scrapers/scripts/crypto/: click_all_tab.js  extract_events.js  extract_sports.js  find_see_more.js
pmi-ingest/pmi_ingest/scrapers/scripts/robinhood/: click_show_more.js  discover_categories.js  discover_dropdown.js  dismiss_consent.js  extract_child_contracts.js  extract_events.js
pmi-ingest/pmi_ingest/streams/: __init__.py  kalshi_ws.py  polymarket_ws.py
pmi-ingest/tests/: test_polymarket_events_enrich.py
pmi-maga-web/: .dockerignore  .gitignore  Dockerfile  README.md  package.json
pmi-mcp/: README.md
pmi-new-frontend/: app.jsx  components.jsx  data-senate.js  data.js  index.html  map.jsx  pmi-model.js  pmi-model.sample.js.bak  site-pro.css  (+7 more)
pmi-workers/: .env.example  Dockerfile  README.md  pyproject.toml
pmi-workers/cron/: crontab
pmi-workers/pmi_workers/: __init__.py  cli.py  registry.py  runner.py  worker.py
pmi-workers/pmi_workers/jobs/: __init__.py  daily.py  embed_markets.py  hourly.py  llm_batch.py  reeval_drifted.py  reeval_market.py  score.py  score_all.py  workflow.py
pmi-workers/tests/: conftest.py  test_queue.py  test_workflow.py
(+164 files in other folders)
