[project]
name = "pmi-api"
version = "0.1.0"
description = "Read-only REST gateway over pmi-core. P0 ships /indexes + /health."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Reid" }]

dependencies = [
    "pmi-core",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
    "structlog>=24.1.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[project.scripts]
pmi-api = "pmi_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pmi_api"]

[tool.uv.sources]
pmi-core = { path = "../pmi-core", editable = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
