[project]
name = "pmi-core"
version = "0.1.0"
description = "PMI Platform shared core: tier-prefixed schema, DSL IR, evaluation pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Reid" }]

dependencies = [
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.2",
    "pgvector>=0.3.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    # Exact Poisson-binomial PMF via np.convolve (CORR-1.6 seat_distribution).
    # numpy only — scipy.stats has no exact Poisson-binomial (only normal
    # approximations, which we don't need at n~35), so it's not worth +90MB.
    "numpy>=1.26",
    "click>=8.1.7",
    "httpx>=0.27.0",
    "tenacity>=8.4.0",
    # mlflow-skinny = tracking + prompt registry client without server-only deps
    # (no gunicorn / sklearn / pandas). Keep version aligned with the mlflow
    # server image in pmi_data_platform/mlflow/Dockerfile — earlier 2.18 server
    # rejects 'dummy-source' that the 2.22+ client sends on register_prompt.
    "mlflow-skinny>=2.22,<3",
    # Real LLM provider (CORR-0.1 / CORR-0.3). pinned >=1.40 so we get the
    # async response_format={"type": "json_object"} support cleanly.
    "openai>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
pmi-core = "pmi_core.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pmi_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
