[project]
name = "pmi-ingest"
version = "0.1.0"
description = "Polymarket REST poller (P0) + future WS/chain ingesters writing into pmi-core schema."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Reid" }]

dependencies = [
    "pmi-core",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "tenacity>=8.4.0",
    "click>=8.1.7",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.7", "ruff>=0.5.0"]

[project.scripts]
pmi-ingest = "pmi_ingest.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pmi_ingest"]

[tool.uv.sources]
pmi-core = { path = "../pmi-core", editable = true }
