[project]
name = "pmi-ingest"
version = "0.1.0"
description = "Polymarket REST poller (P0) + future WS/chain ingesters writing into pmi-core schema."
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Reid" }]

dependencies = [
    "pmi-core",
    "httpx>=0.27.0",
    "structlog>=24.1.0",
    "tenacity>=8.4.0",
    "click>=8.1.7",
    "pydantic>=2.7.0",
    "cryptography>=42.0.0",
    # WS consumer (CORR-4.1). Optional at runtime — `import websockets` happens
    # lazily inside `pmi_ingest.streams.polymarket_ws`. Pinned to the v12 line
    # for the modern `websockets.connect` async API.
    "websockets>=12.0",
    # Polygon chain indexer (CORR-4.2). Lazily imported in
    # `pmi_ingest.chain.polygon_indexer` so other CLI commands work without
    # the (heavy) eth-* dep tree installed.
    "web3>=6.20.0",
    # Robinhood + Crypto.com scrapers (legacy Micah ports). Lazily imported
    # in `pmi_ingest.scrapers.playwright_base` — REST-only CLI commands run
    # without the (heavy) Chromium binary being present.
    "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0", "pytest-asyncio>=0.23.7", "ruff>=0.5.0"]

[project.scripts]
pmi-ingest = "pmi_ingest.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pmi_ingest"]

[tool.uv.sources]
pmi-core = { path = "../pmi-core", editable = true }
