[project]
name = "pmi-workers"
version = "0.1.0"
description = "Scheduled + queued worker pool over pmi-core. P0 ships a supercronic-driven `run-job` runner; P1 adds Arq fan-out."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Reid" }]

dependencies = [
    "pmi-core",
    "click>=8.1.7",
    "structlog>=24.1.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
]

[project.optional-dependencies]
# Arq lands in P1 (see README "Why not P0?"). Listed here so `uv pip install
# .[arq]` opts in without dragging Redis into the P0 container image.
arq = ["arq>=0.26.0", "redis>=5.0.0"]

dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[project.scripts]
# Mirrors micah-job-executor's `run-job <name>` contract so supercronic
# crontabs port across without change.
run-job = "pmi_workers.runner:main"
pmi-workers = "pmi_workers.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pmi_workers"]

[tool.uv.sources]
pmi-core = { path = "../pmi-core", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
